Tomcat DBCP added

--- a/res/labels_ua.properties
+++ b/res/labels_ua.properties
@@ -1,4 +1,6 @@
 admin.title=Панель адміністратора
+products.title=Вітємо у нашому книжковому магазині!
+
 
 admin.nav.users=Управління користувачами
 admin.nav.orders=Управління замовленнями
