Front except for cart

--- a/res/admin-labels_ua.properties
+++ b/res/admin-labels_ua.properties
@@ -53,6 +53,8 @@ admin.books.edit.publisher=Видавник
 admin.books.edit.title=Назва
 admin.books.edit.description=Опис
 admin.books.edit.image=Зображення
+admin.books.all.categories=Всі категорії
+admin.books.all.publishers=Всі видавники
 
 admin.books.edit.choose.category=Оберіть категорію
 admin.books.edit.choose.publisher=Оберіть видавника
