--- a/res/admin-labels_ua.properties
+++ b/res/admin-labels_ua.properties
@@ -112,3 +112,19 @@ error.code.503.title=503 Сервіс недоступний
 error.code.503.message=Сервіс тимчасово недоступний. Будь ласка, спробуйте пізніше.
 error.code.400.title=400 Невірний запит
 error.return=Повернутися
+
+
+admin.orders.filter.label.user=Покупець
+admin.orders.filter.label.sum=Сума
+admin.orders.filter.label.date=Дата
+admin.orders.filter.label.status=Статус
+
+admin.orders.header.id=ID
+admin.orders.header.client=Покупець
+admin.orders.header.total=Сума
+admin.orders.header.status=Статус
+admin.orders.header.date=Дата
+
+admin.orders.label.title=Назва
+admin.orders.label.quantity=Кількість
+admin.orders.label.change=Змінити
