--- a/res/user-labels_ua.properties
+++ b/res/user-labels_ua.properties
@@ -1,7 +1,6 @@
 products.title=Вітємо у нашому книжковому магазині!
 products.nav.language=Мова
-products.login=Увійти
-products.signup=Зареєструватися
+
 
 products.button.load.more=Завантажити ще
 
@@ -24,6 +23,9 @@ user.label.lastname=Призвище
 user.label.price=Ціна
 user.label.title=Назва
 user.label.description=Опис
+user.label.quantity=Кількість
+user.label.signup=Не маєте аккаунту?
+
 
 user.label.sort.by=Сортувати за
 user.label.sort.tag.asc=назвою висхідно
@@ -40,8 +42,31 @@ user.label.filter.price=Ціна
 user.label.filter.choose.category=Оберіть категорію
 user.label.filter.choose.publisher=Оберіть видавника
 
-
+user.message.not.enough.products=Кількості на складі недостатньо аби додати до кошика.
 
 user.nav.language=Мова
 user.login.title=Увійти
+user.logout.title=Вийти
+user.signup.title=Зареєструватися
+cart.header.number=№
+cart.header.title=Назва
+cart.header.price=Ціна
+cart.header.quantity=Кількість
+cart.header.sum=Сума
+cart.header.actions=Дії
+cart.button.continue=Продовжити покупки
+cart.button.place.order=Розмістити замовлення
+user.cart.title=Кошик
 
+cart.control.delete=Видалити
+cart.control.plus=Збільшити
+cart.control.minus=Зменшити
+
+user.success.title=Ваше замовлення було успішно розміщене.
+user.success.header=Ваше замовлення було успішно розміщене. <br> Наші менеджери невдовзі з вами зконтактують. <br>Номер Вашого замовлення: 
+user.success.home=На головну
+
+cart.button.login=Увійти для розміщення
+
+cart.empty.message=Ваш кошик порожній.
+cart.label.total=Загалом
