Functionality completed - profile page added

--- a/res/admin-labels_ua.properties
+++ b/res/admin-labels_ua.properties
@@ -18,11 +18,12 @@ admin.users.header.actions=Дії
 admin.users.header.password=Пароль
 admin.users.count=Загальна кількість користувачів
 
+admin.publishers.header.title=Назва
 admin.publishers.header.actions=Дії
 admin.publishers.count=Загальна кількість видавників
 
 
-
+admin.categories.header.title=Назва
 admin.categories.header.actions=Дії
 admin.categories.count=Загальна кількість категорій
 
@@ -119,7 +120,7 @@ admin.orders.filter.label.sum=Сума
 admin.orders.filter.label.date=Дата
 admin.orders.filter.label.status=Статус
 
-admin.orders.header.id=ID
+admin.orders.header.number=№
 admin.orders.header.client=Покупець
 admin.orders.header.total=Сума
 admin.orders.header.status=Статус
