--- a/res/user-labels_ua.properties
+++ b/res/user-labels_ua.properties
@@ -70,3 +70,12 @@ cart.button.login=Увійти для розміщення
 
 cart.empty.message=Ваш кошик порожній.
 cart.label.total=Загалом
+
+user.profile.title=Профіль
+user.welcome=Вітаю
+user.orders.header.number=№
+user.orders.header.date=Дата
+user.orders.header.total=Загалом
+user.orders.header.status=Статус
+user.orders.label.title=Назва
+user.orders.label.quantity=Кількість
