Functionality completed - bugs fixed

--- a/res/admin-labels_ua.properties
+++ b/res/admin-labels_ua.properties
@@ -99,7 +99,7 @@ admin.books.edit.button.submit=Зберегти
 admin.categories.button.import=Імпортувати
 admin.publishers.button.import=Імпортувати
 admin.books.button.import=Імпортувати
-admin.books.button.filter=Фільтрувати
+admin.button.filter=Фільтрувати
 
 
 
@@ -115,7 +115,7 @@ error.code.400.title=400 Невірний запит
 error.return=Повернутися
 
 
-admin.orders.filter.label.user=Покупець
+admin.orders.filter.label.user=ID Покупця
 admin.orders.filter.label.sum=Сума
 admin.orders.filter.label.date=Дата
 admin.orders.filter.label.status=Статус
