--- a/res/user-labels_ua.properties
+++ b/res/user-labels_ua.properties
@@ -63,7 +63,7 @@ cart.control.plus=Збільшити
 cart.control.minus=Зменшити
 
 user.success.title=Ваше замовлення було успішно розміщене.
-user.success.header=Ваше замовлення було успішно розміщене. <br> Наші менеджери невдовзі з вами зконтактують. <br>Номер Вашого замовлення: 
+user.success.header=Ваше замовлення було успішно розміщене.<br>Наші менеджери невдовзі з вами зконтактують.<br>Номер Вашого замовлення 
 user.success.home=На головну
 
 cart.button.login=Увійти для розміщення
@@ -79,3 +79,6 @@ user.orders.header.total=Загалом
 user.orders.header.status=Статус
 user.orders.label.title=Назва
 user.orders.label.quantity=Кількість
+
+admin.orders.all.statuses=Всі статуси
+user.message.user.blocked=У Вас немає можливості розмістити замовлення. Зв`яжіться, будь ласка, з адміністратором.
