Finished with comments.

--- a/res/admin-labels_ua.properties
+++ b/res/admin-labels_ua.properties
@@ -7,11 +7,10 @@ admin.welcome=Вітаю
 
 admin.nav.users=Управління користувачами
 admin.nav.orders=Управління замовленнями
-admin.nav.catalogue=Управління каталогом
 admin.nav.language=Мова
 
 admin.users.header.firstname=Ім'я
-admin.users.header.laststname=Призвище
+admin.users.header.lastname=Призвище
 admin.users.header.administrator=Адміністратор
 admin.users.header.blocked=Заблокований
 admin.users.header.actions=Дії
@@ -32,7 +31,6 @@ admin.books.header.image=Зображення
 admin.books.header.price=Ціна
 admin.books.header.publisher=Видавник
 admin.books.header.category=Категорія
-admin.books.header.date=Дата публікації
 admin.books.header.quantity=Кількість
 admin.books.header.actions=Дії
 admin.books.count=Загальна кількість книг
@@ -101,19 +99,12 @@ admin.publishers.button.import=Імпортувати
 admin.books.button.import=Імпортувати
 admin.button.filter=Фільтрувати
 
-
-
-
-
 admin.nav.publishers=Управління видавниками
 admin.nav.categories=Управління категоріями
 admin.nav.books=Управління книгами
 
-error.code.503.title=503 Сервіс недоступний
-error.code.503.message=Сервіс тимчасово недоступний. Будь ласка, спробуйте пізніше.
 error.code.400.title=400 Невірний запит
 error.return=Повернутися
-
 
 admin.orders.filter.label.user=ID Покупця
 admin.orders.filter.label.sum=Сума
