--- a/res/user-labels_ua.properties
+++ b/res/user-labels_ua.properties
@@ -8,8 +8,8 @@ product.button.back=Повернутися
 product.button.add.to.cart=Додати до кошика
 
 error.401.message=Необхідно авторизувати користувача для переглядання контенту.
-error.401.title=Неавторізований користувач
-error.400.title=Невірний запит
+#error.401.title=Неавторізований користувач
+#error.400.title=Невірний запит
 user.button.login=Увійти
 user.button.cancel=Скасувати
 user.button.signup=Зареєструватися
